# deeplscalp

./: .gitignore  _kaggle_v71_wf_realistic.yaml  _kaggle_v71_wf_tune.yaml  pipeline.py  pyproject.toml  requirements.lock.txt  requirements.txt  test_debug_gates.py
.github/workflows/: ci.yml
.lsp/.cache/: db.transit.json
artifacts/data_audit/: audit_BTC_USDT_1h.json  audit_BTC_USDT_1m.json  (+18 more)
backups/: event_stream_dataset.py.bak_1767059790  full_pipeline_event.yaml.bak_1767059790  run_full_pipeline.py.bak_1767059790
configs/: _kaggle_v71_wf_tune.yaml  full_pipeline.yaml  labeling_event.yaml  pipeline.yaml  v7.yaml  v71_cpu_efficient.yaml  v71_cpu_pro.yaml  v71_cpu_pro_stress.yaml  v71_full.yaml  v71_gpu_kaggle.yaml  v71_wf_tune.yaml  v71_wf_tune_kaggle.yaml
deeplscalp/: __init__.py
evaluation/: checkpointing.py  event_stream_dataset.py  policy_gates.py  run_full_pipeline.py  run_full_pipeline.py.bak  run_full_pipeline.py.bak2  run_full_pipeline.py.bak3  run_full_pipeline.py.bak_fix_collate  run_full_pipeline.py.bak_jsonfix  run_full_pipeline_event_v2.py
scripts/: 01_download_data.sh  02_convert_to_parquet.sh  03_validate_datasets.py  04_leakage_spotcheck.py  06_relabel_eventdriven.py  08_full_run.sh  09_full_run_v2.sh  backtest_v7.py  generate_datasets_v71.sh  run_v71_full.py  run_v71_walkforward.py  run_v71_walkforward_realistic.py  smoke_v7.py  train_v7.py
tests/: test_sanity_v71.py
tools/: kaggle_entry.py  make_project_zip.sh  preflight_edge_check.py
training/: __init__.py  itransformer_full.py  itransformer_v7.py  itransformer_v71.py
(+48 files in other folders)
